<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>droidcam4ros</name>
  <version>0.0.1</version>
  <description>ROS 2 package for DroidCam</description>
  <maintainer email="ilya.vdovets@gmail.com">vdovetzi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>rclcpp</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

  <depend>libopencv-dev</depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
